Crecaión del login.

--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Introduce tus datos"
+            android:text="@string/app_name"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -31,38 +31,56 @@
         android:id="@+id/linearLayout"
         android:layout_width="417dp"
         android:layout_height="700dp"
+        android:gravity="center"
         android:orientation="vertical"
+        android:paddingStart="20px"
+        android:paddingEnd="20px"
         tools:layout_editor_absoluteY="31dp">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="177dp"
+            android:layout_height="122dp"
+            android:src="@drawable/usuario" />
+
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/usuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Usuario:"
-            android:textStyle="bold"
-            android:textColor="#000000"/>
+            android:text="@string/usu"
+            android:textColor="#000000"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/editTextUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Introduce tu usuario..."
+            android:hint="@string/usu2"
             android:inputType="text" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/contraseña"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Contraseña:"
-            android:textStyle="bold"
-            android:textColor="#000000"/>
+            android:text="@string/contra"
+            android:textColor="#000000"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Introduce tu contraseña"
+            android:hint="@string/contra2"
             android:inputType="textPassword" />
+
+        <Button
+            android:id="@+id/boton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/boton"
+            android:background="@color/btn"
+            app:backgroundTint="@null"
+            />
 
     </LinearLayout>
 
