--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="superior">#4CAF50</color>
     <color name="btn">#009688</color>
+    <color name="cardview">#B5F373</color>
+    <color name="grisecillo">#959595</color>
 </resources>
